src/test/ui/borrowck/borrowck-uninit-ref-chain.mir.stderr
error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:11:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:15:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:19:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:36:14
   |
LL |     let _b = &a.y; //[ast]~ ERROR use of possibly uninitialized variable: `a.y` [E0381]
   |              ^^^^ use of possibly uninitialized `a.y`

error[E0381]: borrow of possibly uninitialized variable: `**a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:41:14
   |
LL |     let _b = &**a.y; //[ast]~ ERROR use of possibly uninitialized variable: `**a.y` [E0381]
   |              ^^^^^^ use of possibly uninitialized `**a.y`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0381`.
